# pytest-result-sender

./: .flake8  .gitignore  pyproject.toml
.github/workflows/: pubilsh-to-pypi.yaml
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
